--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     <title>Excursion</title>
   </head>
   <body>
-    <p>Discover hidden places in the world around you</p>
-    <a href="index.html">Download Excursion (Coming soon!)</a>
+    <p id="header">Discover hidden places in the world around you</p>
+    <a class="excursionlink" href="index.html">Download Excursion (Coming soon!)</a>
+    <p><video src="./resources/videos/excursion.mp4" autoplay loop><p>
+    <p class="heading">Your personal travel guide</p>
+    <p class="bodytext">Excursion remembers places you like, and recommends new points of interest around you.</P>
+    <p><img src="./resources/images/camp.jpg"></p>
+    <p><img src="./resources/images/phone.png"></p>
+    <p class="heading">Coming Soon for iPhone and Android</p>
+    <a class="excursionlink" href="index.html">Download Excursion (Coming soon!)</a>
+    <p id="footer"> &copy Excursion</p>
   </body>
-</html>
